<resources>
    <string name="app_name">Tafa Talk</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>

    <string name="facebook_app_id">746469249350379</string>
    <string name="fb_login_protocol_scheme">fb746469249350379</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account? <font fgcolor='#0000FF'> Login</font> </string>
    <string name="resetPassword">Forgot Your Password?  <font fgcolor='#FFFF00'>  Reset Now</font> </string>
    <string name="dont_have_an_account">Dont Have An Account?<font fgcolor='#FFFF00'>  Create One</font>  </string>
    <string name="view_all_bets"><u>View all bets</u></string>

    <string-array name="numbers">
        <item>Nil</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string name="baseurl">http://127.0.0.1:8080/</string>

    <!-- strings.xml -->
    <string name="welcome_to">Welcome to our recorded video learning \nmaterials in all subjects also all topics in\nvarious subjects are included</string>
    <string name="spinner_title">AndroidSpinnerExample</string>
    <string name="title_activity_subscription">SubscriptionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_downloads">DownloadsActivity</string>

    <string name="hiletsgetstarted">Hi! Let Us Get Started</string>
    <string name="whichbestdscribesyou">Which best describes you?</string>
    <string name="amaman">Am a man</string>
    <string name="amawoman">Am a woman</string>
    <string name="amanother">I prefer not to say</string>

    <string name="gotit">Got It!</string>
    <string name="enteryourbirthdate">Enter your Date of Birth!</string>
    <string name="done">Done!</string>
    <string name="title_activity_choose_login">ChooseLogin</string>

    <string name="choosehowtologin">Choose How To Login</string>
    <string name="continuewithgoogle">Continue With Google</string>
    <string name="continuewithfacebook">Continue With Facebook</string>
    <string name="continuewithnumber">Continue With Number</string>

    <string name="contactinformation">Contact Information</string>
    <string name="continued">Continue</string>
    <string name="finish">Finish</string>
    <string name="enteryourphonenumber">Enter Your Phone Number</string>
    <string name="desc_two">For maintaining and anticipating need for, a arange of processes and functions, ostensibly for the purpose of improved operations and reduced budget</string>
    <string name="descriptionother">The only thing we can manage better than projects is people</string>
    <string name="carname">Volvo T440s</string>

</resources>
