<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/transparent"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/hiletsgetstarted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/choosehowtologin"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="2dp"
                android:orientation="vertical">

                <Button
                    android:drawableLeft="@drawable/googleicon"
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/continuewithgoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectanglebutton"
                    android:padding="10dp"
                    android:text="@string/continuewithgoogle"
                    android:textAllCaps="false" />

                <Button
                    android:drawableStart="@drawable/facebookicon"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:id="@+id/continuewithfacebook"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectanglebutton"
                    android:padding="10dp"
                    android:text="@string/continuewithfacebook"
                    android:textAllCaps="false" />

                <Button
                    android:drawableLeft="@drawable/mobileicon"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:id="@+id/continuewithnumber"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectanglebutton"
                    android:padding="10dp"
                    android:text="@string/continuewithnumber"
                    android:textAllCaps="false" />

            </LinearLayout>

            <TextView
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"
                android:id="@+id/alreadyhaveanaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textSize="15dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>